--- a/people.htm
+++ b/people.htm
@@ -217,7 +217,7 @@ Website: <a href="https://czang.github.io/" target="_blank">czang.github.io</a><
 <a href="CV_chongzhi_zang.pdf" target="_blank">Curriculum Vitae (pdf)</a> 
 </p>
 <p style="width: 900px; line-height: 1.6;" align="left">
-Dr. Chongzhi Zang is an Associate Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA since November 2016. He is also a faculty member of the UVA Comprehensive Cancer Center. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA, he completed his postdoctoral training with <a href="http://liulab.dfci.harvard.edu" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on algorithm development for high-throughput genomic data analysis and integrative modeling of gene regulatory networks in mammalian cell systems.
+Dr. Chongzhi Zang is an Associate Professor in the Center for Public Health Genomics, University of Virginia School of Medicine. He holds faculty appointments in the Departments of Public Health Sciences, Biochemistry and Molecular Genetics, and Biomedical Engineering at UVA since November 2016. He is also a faculty member of the UVA Comprehensive Cancer Center. Chongzhi received his BS in physics from Peking University and PhD in physics from the George Washington University. He did his undergraduate research in high-field laser physics with <a href="http://highfield.iphy.ac.cn/member_detail_z.html" target="_blank">Jie Zhang</a> at the Institute of Physics, Chinese Academy of Sciences, and his PhD research in computational biophysics with <a href="http://home.gwu.edu/~wpeng/" target="_blank">Weiqun Peng</a> and <a href="https://www.nhlbi.nih.gov/science/epigenome-biology/people/zhao-keji" target="_blank">Keji Zhao</a> at the National Institutes of Health. Before joining UVA, he completed his postdoctoral training with <a href="https://liulab-dfci.github.io/" target="_blank">Xiaole Shirley Liu</a> at Harvard University's Dana-Farber Cancer Institute. Chongzhi is a computational biologist with expertise in epigenetics and transcriptional regulation. His research focuses on algorithm development for high-throughput genomic data analysis and integrative modeling of gene regulatory networks in mammalian cell systems.
 </p><br>
 <hr>
 <h3><font color="#002F6C">Research Scientists</font></h3>
@@ -244,19 +244,19 @@ Dr. Sheng'en Shawn Hu is a research scientist after postdoctoral training in the
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Qingying Chen joined the lab as a postdoctoral research associate in January 2021. She received her PhD in physics from the University of Tulsa and her B.S. in Applied Physics from Xi’an Jiaotong University in China. Her research focused on designing, simulating, and testing the interference filters for the phonic sensing, and developing coating techniques to functionalize the integrated sensing elements. She is interested in computational biology and excited to gain experience in bioinformatics research.
 </p><br><br>
-<!--<p style="line-height: 1.6;">
-<img align="right" src="images/billy_lamberti.jpg" style="height:180px">
-<a href="https://www.billyflamberti.com" target="_blank"><b>William F. Lamberti, PhD</b></a>
-<a href="mailto:william.f.lamberti@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=nqqk3EgAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-William Franz Lamberti received his B.A. in Mathematical Statistics from The College of New Jersey in 2015 and his M.S. in Statistical Science from George Mason University in 2017.  Before joining UVA in January 2021, he received his PhD in Computational Sciences and Informatics with a specialization in Data Science from George Mason University where he was a Presidential Scholar.  His current research interests include image processing applications, shape analysis, and statistical and machine learning classification problems. He is planning on incorporating skills in explainable machine learning and imaging to spatial genomics problems.
-</p><br><br>-->
 <p style="line-height: 1.6;">
 <img align="right" src="images/shengyuan_wang.jpg" style="width:180px">
 <b>Shengyuan Wang, PhD</b>
 <a href="mailto:vdj6tq@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=o_XEptEAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shengyuan Wang joined the lab as a postdoctoral research associate in March 2022. He received his PhD in Bioinformatics and Computational Biology from George Mason University, M.S. in Pharmaceutical Science from North Carolina Central University and B.S. in Biotechnology from China Agricultural University. His research interest lies in algorithm development in genomics data analysis to tackle biological problems.
+</p><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/kyubin_lee.jpg" style="width:180px">
+<b>Kyubin Lee, PhD</b>
+<a href="mailto:xdz2gw@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=Kq937DsAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Kyubin Lee joined the lab as a postdoctoral research associate in October 2022. He received his Ph.D. in Computer Science and B.S. in Mathematics from the University of Wisconsin-Madison. His Ph.D. research with Mark Craven focused on developing explainable machine learning (ML) methods with applications to mapping viral genotypes to host disease phenotypes. He also worked on developing computational methods for cancer genomics research at National Cancer Center in South Korea as part of his military service. Co-mentored by Drs. Yuh-Hwa Wang and Francine Garrett-Bakelman at the Department of Biochemistry and Molecular Genetics, he is interested in applying integrative ML methods to address various challenges to understand human biology. Outside of research, he enjoys having time with his family.
 </p><br><br>
 <hr>
 <h3><font color="#002F6C">Graduate Students</font></h3>
@@ -336,12 +336,15 @@ Ivory Tang (Class of 2025) plans to major in math and follow a pre-med track. Sh
 <a href="mailto:kcz3my@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Andy Cao is a Second Year undergraduate student (Class of 2025) planning to study Biology and Computer Science on a pre-med track. He is excited to develop and apply computational algorithms to explore the human genome and questions relating to genomic disorders.
-</p><br><br><br>
-<!--<p style="line-height: 1.6;">
-<b>Jingyi Wang</b>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-</p><br>
+</p><br><br><br><br>
 <p style="line-height: 1.6;">
+<img align="right" src="images/jingyi_wang.jpg" style="width:180px">
+<b>Jingyi Wang</b>
+<a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Jingyi Wang is a Second Year undergrad (Class of 2025) with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics after graduation.
+</p><br><br><br><br><br>
+<!--<p style="line-height: 1.6;">
 <b>Jennifer Wu</b>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 </p><br>
@@ -514,7 +517,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 		<td><b>Aaron Ho</b></td>
 		<td>Biochemistry and Computer Science</td>
 		<td>10/2018&ndash;05/2020</td>
-		<td></td>
+		<td>Software Engineer at Bloomberg</td>
 	</tr>
 	<tr>
 		<td><b>Benjamin Ke</b></td>
@@ -671,7 +674,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: October 28, 2022</p>
+<p align="right">Last modified: November 1, 2022</p>
 
 </div>
 
