--- a/research.htm
+++ b/research.htm
@@ -187,33 +187,37 @@ Data-driven discovery has become a new paradigm of biological research. By model
 <hr>
 <h3><font color="#002F6C">Collaborations</font></h3>
 <p style="line-height: 1.6;">Computational biology is an interdisciplinary science. It cannot thrive without close collaboration between researchers with different backgrounds and expertises. We always commit to collaborations and team science with experimental biologists, clinicians, as well as statisticians, computer scientists, mathematicians, and physicists. We study functional epigenetics and transcriptional regulation in a variety of biological systems and human diseases, including T-cell immunity, malignant peripheral nerve sheath tumor (MPNST), acute myeloid leukemia (AML), T-cell acute lymphoblastic leukemia (T-ALL), colorectal cancer, coronary artery disease, development, and environmental health, etc.</p>
+<p style="line-height: 1.6;">Our collaborators include:
+</p>
+<ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
+<li><a href="https://mylesbrownlab.dana-farber.org/" target="_blank"><font color="#002F6C">Myles Brown</font></a>, Department of Medical Oncology, Dana-Farber Cancer Institute, Harvard Medical School</li>
+<li><a href="https://med.nyu.edu/faculty/suresh-cuddapah" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
+<li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
+<li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Steven Wang</font></a>, Department of Genetics, Yale University</li>
+<li><a href="https://hmh-cdi.org/our-team/xue-lab/" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
+<li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
+</p></ul>
 <button type="button" class="collapsible">
-<p style="line-height: 1.6;">Our collaborators include (click to expand)
+<p style="line-height: 1.6;">&nbsp;&nbsp;and many colleagues at UVA: (click to expand)
 </p>
 </button>
 <div class="content">
 <ul style="list-style-type:disc; padding-left: 24px; line-height: 1.6;"><p>
-<li><a href="https://uvahealth.com/findadoctor/profile/todd-w-bauer" target="_blank"><font color="#002F6C">Todd W. Bauer</font></a>, Division of Surgical Oncology, Department of Surgery, University of Virginia</li>
-<li><a href="https://mylesbrownlab.dana-farber.org/" target="_blank"><font color="#002F6C">Myles Brown</font></a>, Department of Medical Oncology, Dana-Farber Cancer Institute, Harvard Medical School</li>
-<li><a href="https://med.nyu.edu/faculty/suresh-cuddapah" target="_blank"><font color="#002F6C">Suresh Cuddapah</font></a>, Department of Environmental Medicine, New York University</li>
-<li><a href="https://dutta-labwebsite.github.io/" target="_blank"><font color="#002F6C">Anindya Dutta</font></a>, Department of Genetics, University of Alabama at Birmingham</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology, University of Virginia</li>
-<li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine, University of Virginia</li>
-<li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Center for Public Health Genomics, University of Virginia</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/ar7jq/" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Center for Public Health Genomics, University of Virginia</li>
-<li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://www.immunology.virginia.edu/Sun/" target="_blank"><font color="#002F6C">Jie Sun</font></a>, Beirne B. Carter Center for Immunology Research, University of Virginia</li>
-<li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology, University of Virginia</li>
-<li><a href="https://campuspress.yale.edu/wanglab/" target="_blank"><font color="#002F6C">Siyuan Steven Wang</font></a>, Department of Genetics, Yale University</li>
-<li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics, University of Virginia</li>
-<li><a href="https://hmh-cdi.org/our-team/xue-lab/" target="_blank"><font color="#002F6C">Hai-Hui Xue</font></a>, Center for Discovery and Innovation, Hackensack University Medical Center</li>
-<li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science, University of Virginia</li>
-<li><a href="https://zhulab.wordpress.com/" target="_blank"><font color="#002F6C">Yuan Zhu</font></a>, Children's Research Institute, Children’s National Medical Center</li>
-<li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology, University of Virginia</li>
+<li><a href="https://uvahealth.com/findadoctor/profile/todd-w-bauer" target="_blank"><font color="#002F6C">Todd W. Bauer</font></a>, Division of Surgical Oncology, Department of Surgery</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/fg5q/" target="_blank"><font color="#002F6C">Francine Garrett-Bakelman</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/hj8d/" target="_blank"><font color="#002F6C">Hao Jiang</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="http://lilab.medicine.virginia.edu/" target="_blank"><font color="#002F6C">Hui Li</font></a>, Department of Pathology</li>
+<li><a href="https://uvahealth.com/findadoctor/profile/li-li" target="_blank"><font color="#002F6C">Li Li</font></a>, Department of Family Medicine</li>
+<li><a href="http://millerlab.org/" target="_blank"><font color="#002F6C">Clint L. Miller</font></a>, Center for Public Health Genomics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/gm7sj/" target="_blank"><font color="#002F6C">Golam Mohi</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/ar7jq/" target="_blank"><font color="#002F6C">Aakrosh Ratan</font></a>, Center for Public Health Genomics</li>
+<li><a href="https://med.virginia.edu/faculty/faculty-listing/jss5y/" target="_blank"><font color="#002F6C">Jeffrey S. Smith</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://www.immunology.virginia.edu/Sun/" target="_blank"><font color="#002F6C">Jie Sun</font></a>, Beirne B. Carter Center for Immunology Research</li>
+<li><a href="https://toddstuke.wixsite.com/stukelab" target="_blank"><font color="#002F6C">P. Todd Stukenberg</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://uvahealth.com/findadoctor/profile/jianguo-tao" target="_blank"><font color="#002F6C">Jianguo Tao</font></a>, Department of Pathology</li>
+<li><a href="https://med.virginia.edu/yuh-hwa-wang-lab/" target="_blank"><font color="#002F6C">Yuh-Hwa Wang</font></a>, Department of Biochemistry and Molecular Genetics</li>
+<li><a href="https://engineering.virginia.edu/faculty/aidong-zhang" target="_blank"><font color="#002F6C">Aidong Zhang</font></a>, Department of Computer Science</li>
+<li><a href="https://mic.med.virginia.edu/zong/" target="_blank"><font color="#002F6C">Hui Zong</font></a>, Department of Microbiology, Immunology and Cancer Biology</li>
 (in alphabetical order)
 </p></ul>
 </div>
@@ -253,7 +257,7 @@ Data-driven discovery has become a new paradigm of biological research. By model
 </div>
 </div>
 <hr>
-<p align="right">Last modified: November 28, 2022</p>
+<p align="right">Last modified: January 30, 2023</p>
 
 </div>
 
