--- a/people.htm
+++ b/people.htm
@@ -342,7 +342,14 @@ Andy Cao is a Second Year undergraduate student (Class of 2025) planning to stud
 <b>Jingyi Wang</b>
 <a href="mailto:jw4xtu@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Jingyi Wang is a Second Year undergrad (Class of 2025) with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics after graduation.
+Jingyi Wang is a Second Year undergraduate student (Class of 2025) with a biochemistry major and a data analytics minor. She is looking forward to investigating genomic issues using bioinformatics approaches and continues studying biostatistics after graduation.
+</p><br><br><br><br><br>
+<p style="line-height: 1.6;">
+<img align="right" src="images/nina_chinnam.jpg" style="width:180px">
+<b>Nina Chinnam</b>
+<a href="mailto:fhs9af@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+</p><p style="width: 640px; line-height: 1.6;" align="left">
+Nina Chinnam is a Second Year undergraduate student (class of 2025) pursuing a double major in Computer Science and Cognitive Science. Her interests lie in machine learning and biological applications of data sciences and analytics.
 </p><br><br><br><br><br>
 <!--<p style="line-height: 1.6;">
 <b>Jennifer Wu</b>
@@ -674,7 +681,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: November 1, 2022</p>
+<p align="right">Last modified: February 5, 2023</p>
 
 </div>
 
