--- a/people.htm
+++ b/people.htm
@@ -157,7 +157,13 @@ function myFunction() {
       <img src="images/20221027.jpg">
     </li>
     <li>
+      <img src="images/20221026.jpg">
+    </li>
+    <li>
       <img src="images/20220827.jpg">
+    </li>
+    <li>
+      <img src="images/20220828.jpg">
     </li>
     <li>
       <img src="images/20210815_2.jpg">
