--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">February 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		The lab receives a pilot funding award from the UVA Cancer Center's Molecular Genetics and Epigenetics (GEN) program!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">November 2022</font>
 		</p>
 	</div>
@@ -896,7 +908,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: November 22, 2022</p>
+<p align="right">Last modified: February 21, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
