--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,18 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">April 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Shawn and Mengxue each presents a poster, while Chongzhi gives an invited talk, at the AACR Annual Meeting.
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">February 2023</font>
 		</p>
 	</div>
@@ -908,7 +920,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: February 21, 2023</p>
+<p align="right">Last modified: April 20, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
