--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Shawn and Mengxue each presents a poster, while Chongzhi gives an invited talk, at the AACR Annual Meeting.
+		<a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/871/719946" target="_blank">Shawn</a> and <a href="https://aacrjournals.org/cancerres/article/83/7_Supplement/3174/724591" target="_blank">Mengxue</a> each presents a poster, while Chongzhi gives an <a href="https://www.abstractsonline.com/pp8/#!/10828/presentation/11217" target="_blank">invited talk</a>, at the 2023 AACR Annual Meeting.
 		</p>
 	</div>
 </div>
