--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,21 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">May 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Chongzhi gives a talk at <a href="https://www.grc.org/cancer-genetics-and-epigenetics-conference/2023/" target="_blank">Cancer Genetics and Epigenetics Gordon Research Conference</a> in Lucca, Italy.
+		<!--
+		The lab receives an administrative supplement grant to the NIH R35 MIRA award to support undergraduate student Jingyi Wang's summer research. Way to go Jingyi!
+		-->
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">April 2023</font>
 		</p>
 	</div>
@@ -920,7 +935,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: April 20, 2023</p>
+<p align="right">Last modified: May 25, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
