--- a/publication.htm
+++ b/publication.htm
@@ -136,20 +136,45 @@ function myFunction() {
 <h2 align="center"><font color="#002F6C">Publications</font></h2>
 <hr>
 <h3><a href="https://scholar.google.com/citations?user=GV7vSDMAAAAJ" target="_blank"><font color="#002F6C">Google Scholar profile</font></a></h3>
-<!--<hr>
+<hr>
 <h3><font color="#002F6C">Recent Preprints</font></h3>
 * indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
 <ol style="padding-left: 24px; line-height: 1.6;">
-<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">Fob1-dependent condensin recruitment and loop extrusion on yeast chromosome III</a><br>
-Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Mingguang Li, Jeffrey S. Smith
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2023.06.18.545510v1" target="_blank">Spatially clustered pattern of transcription factor binding reveals phase-separated transcriptional condensates at super-enhancers</a><br>
+<u>Zhenjia Wang</u>, <u>Shengyuan Wang</u>, <u>Chongzhi Zang</u>
 <br>
-<b>bioRxiv</b>, doi: <a href="https://www.biorxiv.org/content/10.1101/2022.05.12.491704v1" target="_blank">https://doi.org/10.1101/2022.05.12.491704</a> (2022)
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2023.06.18.545510" target="_blank">https://doi.org/10.1101/2023.06.18.545510</a> (2023)
 </p></li>
-</ol>-->
+<!--<li><p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010705" target="_blank">Integrative analysis of DNA replication origins and ORC binding sites in human cells reveals a lack of overlap between them</a><br>
+<u>Mengxue Tian</u>, <u>Zhenjia Wang</u>, Zhangli Su, Etsuko Shibata, Yoshiyuki Shibata, Anindya Dutta<sup>#</sup>, <u>Chongzhi Zang</u><sup>#</sup>
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2022.09.21.508770" target="_blank">https://doi.org/10.1101/2022.09.21.508770</a> (2023)
+</p></li>-->
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.10.24.513520v2" target="_blank">Integrative single-cell meta-analysis reveals disease-relevant vascular cell states and markers in human atherosclerosis</a><br>
+Jose Verdezoto Mosquera, Gaëlle Auguste, Doris Wong, Adam W. Turner, Chani J. Hodonsky, Christian L. Lino Cardenas, Konstantinos Theofilatos, Maxime Bos, Maryam Kavousi, Patricia A. Peyser, Manuel Mayr, Jason C. Kovacic, Johan L. M. Björkegren, Rajeev Malhotra, Sander W. van der Laan, <u>Chongzhi Zang</u>, Nathan C. Sheffield, Clint L. Miller
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2022.10.24.513520" target="_blank">https://doi.org/10.1101/2022.10.24.513520</a> (2022)
+</p></li>
+<li><p><a href="https://www.biorxiv.org/content/10.1101/2022.09.21.508770v2" target="_blank">Temporal dynamics of the multi-omic response to endurance exercise training across tissues</a><br>
+MoTrPAC Study Group (including <u>Benjamin G. Ke</u> and <u>Chongzhi Zang</u>)
+<br>
+<b>bioRxiv</b>, doi: <a href="https://doi.org/10.1101/2022.09.21.508770" target="_blank">https://doi.org/10.1101/2022.09.21.508770</a> (2022)
+</p></li>
+</ol>
 <hr>
 <h3><font color="#002F6C">Selected Publications</font></h3>
-* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.
+<!--* indicates authors with equal contributions. # indicates co-corresponding authors. Underscored are lab members.-->
 <ol style="padding-left: 24px; line-height: 1.6;">
+<li><p><a href="https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1010705" target="_blank">Fob1-dependent condensin recruitment and loop extrusion on yeast chromosome III</a><br>
+Manikarna Dinda, Ryan D. Fine, Shekhar Saha, <u>Zhenjia Wang</u>, <u>Chongzhi Zang</u>, Mingguang Li, Jeffrey S. Smith
+<br>
+<i><b>PLoS Genetics</b></i> 19(4), e1010705 (2023)
+</p></li>
+<li><p><a href="https://academic.oup.com/bioinformatics/article/39/4/btad113/7067742" target="_blank">Interpretable meta-learning of multi-omics data for survival analysis and pathway enrichment</a><br>
+Hyun Jae Cho, Mia Shu, Stefan Bekiranov, <u>Chongzhi Zang</u>, Aidong Zhang
+<br>
+<i><b>Bioinformatics</b></i> 39, btad113 (2023)
+</p></li>
 <li><p><a href="https://www.nature.com/articles/s41467-022-33194-z" target="_blank">Intrinsic bias estimation for improved analysis of bulk and single-cell chromatin accessibility profiles using SELMA</a><br>
 <u>Shengen Shawn Hu</u>, Lin Liu, Qi Li, <u>Wenjing Ma</u>, Michael J. Guertin, Clifford A. Meyer, Ke Deng, Tingting Zhang, <u>Chongzhi Zang</u>
 <br>
@@ -295,7 +320,7 @@ Shenglin Mei, Clifford A. Meyer, Rongbin Zheng, Qian Qin, Qiu Wu, Peng Jiang, Bo
 <p><font color="#002F6C"><b>Publications before the Zang Lab launches</b></font></p>
 </button>
 <div class="content">
-<ol style="padding-left: 24px; line-height: 1.6;" start="31">
+<ol style="padding-left: 24px; line-height: 1.6;" start="33">
 <li><p><a href="http://stke.sciencemag.org/content/10/477/eaag1598" target="_blank">Genome-wide identification and characterization of Notch transcription complex-binding sequence-paired sites in leukemia cells</a><br> 
 Eric Severson*, Kelly L. Arnett*, Hongfang Wang*, <u>Chongzhi Zang</u>*, Len Taing, Hudan Liu, Warren S. Pear, X. Shirley Liu, Stephen C. Blacklow<sup>#</sup>, Jon C. Aster<sup>#</sup><br>
 <i><b>Science Signaling</b></i> 10, 477, eaag1598 (2017)
@@ -415,7 +440,7 @@ Zuo-Qiang Hao, Jie Zhang<sup>#</sup>, Jin Yu, Zhe Zhang, Jia-Yong Zhong, <u>Chon
 </ol>
 </div>
 <hr>
-<p align="right">Last modified: September 21, 2022</p>
+<p align="right">Last modified: June 22, 2023</p>
 </div>
 
 <script>
