--- a/index.htm
+++ b/index.htm
@@ -164,6 +164,20 @@ function myFunction() {
 <div class="row" style="line-height: 1.6;">
 	<div class="column left">
 		<p>
+		<font color="#002F6C">June 2023</font>
+		</p>
+	</div>
+	<div class="column right">
+		<p>
+		Hongpan is awarded a Wagner Fellowship for the coming academic year. Congratulations!
+		<br><br>
+		Hongpan passes his PhD qualifying exam and advances to candidacy. Way to go Hongpan!
+		</p>
+	</div>
+</div>
+<div class="row" style="line-height: 1.6;">
+	<div class="column left">
+		<p>
 		<font color="#002F6C">May 2023</font>
 		</p>
 	</div>
@@ -934,7 +948,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: May 27, 2023</p>
+<p align="right">Last modified: June 23, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
