--- a/index.htm
+++ b/index.htm
@@ -138,7 +138,7 @@ function myFunction() {
       <img src="images/1488566891987_67648.jpg">
     </li>
     <li>
-      <img src="images/20221027.jpg">
+      <img src="images/20230625_2.jpg">
     </li>
     <li>
       <img src="images/1488567032192_666768.jpg">
@@ -948,7 +948,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: June 23, 2023</p>
+<p align="right">Last modified: June 30, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
