--- a/people.htm
+++ b/people.htm
@@ -154,6 +154,9 @@ function myFunction() {
 <div class="ism-slider" data-transition_type="fade" data-play_type="loop" id="home-slider">
   <ol>
     <li>
+      <img src="images/20230625.jpg">
+    </li>
+    <li>
       <img src="images/20221027.jpg">
     </li>
     <li>
@@ -687,7 +690,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: February 5, 2023</p>
+<p align="right">Last modified: June 30, 2023</p>
 
 </div>
 
