--- a/people.htm
+++ b/people.htm
@@ -290,16 +290,16 @@ Hongpan Zhang is a PhD student in the Biomedical Sciences (BIMS) program. Before
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She received her M.S. in Operational Research and Computational Systems Biology from Academy of Mathematics and Systems Science, Chinese Academy of Sciences, and B.S. in Mathematics and Applied Mathematics (Honors Science Program) from Xi’an Jiaotong University in China. She is interested in developing computational models and utilizing computational methods to analyze genomics and epigenomics data. She enjoys listening to music and playing badminton.
 </p><br><br>
-<!--<hr>
+<hr>
 <h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
-<img align="right" src="images/megan_grieco.jpg" style="width:180px">
-<b>Megan Grieco</b>
-<a href="mailto:mg3fh@virginia.edu "><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<img align="right" src="images/shiyu_jiang.jpg" style="width:180px">
+<b>Shiyu Jiang</b>
+<a href="mailto:sjiang43@jhu.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
-Megan Grieco graduated from UVA in 2021 majored in Systems Engineering and works in the lab as a research assistant while preparing for medical school. She joined the lab in Spring 2019 and has been excited about gaining experience in data science and research within the biological field. In her free time, she likes to travel, cheer on the Hoos, and rewatch the Office.
+Shiyu Jiang joined the lab as a volunteer in January 2023 and became research assistant in July 2023. He currently is a master’s student in Computer Science at Johns Hopkins University and previously received B.S. in Computer Science from Wenzhou-Kean University in China. His research interests lie in developing algorithms and tools to solve biological problems. In his free time, he likes to play soccer and spend some time at the gym.
 </p><br><br>
-<p style="line-height: 1.6;">
+<!--<p style="line-height: 1.6;">
 <img align="right" src="images/drew_vanichkachorn.jpg" style="width:180px">
 <b>Andrew Vanichkachorn</b>
 <a href="mailto:acv3by@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
@@ -315,14 +315,7 @@ Ben Ke graduated from UVA in 2022 majored in Biostatistics and will matriculate 
 </p><br><br>-->
 <hr>
 <h3><font color="#002F6C">Undergraduate Students</font></h3>
-<!--<h4><font color="#002F6C">Class of 2022</font></h4>
-<p style="line-height: 1.6;">
-<img align="right" src="images/emilie_neulen.jpg" style="width:180px">
-<b>Emilie Neulen</b>
-<a href="mailto:ean4tp@virginia.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
-</p><p style="width: 640px; line-height: 1.6;" align="left">
-Emilie Neulen is a Biology major with a possible minor in German on the pre-med track (Class of 2022). She is extremely excited to learn more about using programming in Biology and hope to apply some of the skills she will be learning to future research. After graduating, she is planning on attending medical school. In her free time, she enjoys running, playing the violin, cooking, and volunteering at the Charlottesville SPCA.
-</p><br><br>
+<!--
 <h4><font color="#002F6C">Class of 2024</font></h4>
 <p style="line-height: 1.6;">
 <img align="right" src="images/caitlin_mcintyre.jpg" style="width:180px">
@@ -690,7 +683,7 @@ UVA Advance 2022 Summer Student, from Monticello High School, Charlottesville, V
 <p style="line-height: 1.6;">The Zang lab is recruiting motivated students and scholars to work on various topics in computational biology in a collaborative research team. Postdocs, graduate and undergraduate students are all welcome. Please visit <a href="position.htm">Positions</a> page for details.
 </p>
 <hr>
-<p align="right">Last modified: June 30, 2023</p>
+<p align="right">Last modified: July 1, 2023</p>
 
 </div>
 
