--- a/people.htm
+++ b/people.htm
@@ -294,8 +294,8 @@ Zhaoxia Ma is a PhD student in the Biomedical Sciences (BIMS) program. She recei
 <h3><font color="#002F6C">Research Assistants</font></h3>
 <p style="line-height: 1.6;">
 <img align="right" src="images/shiyu_jiang.jpg" style="width:180px">
-<b>Shiyu Jiang</b>
-<a href="mailto:sjiang43@jhu.edu"><img src="images/emailicon.jpg" style="width:20px"></a><br>
+<a href="https://jasonjiangs.github.io/" target="_blank"><b>Shiyu Jiang</b></a>
+<a href="mailto:sjiang43@jhu.edu"><img src="images/emailicon.jpg" style="width:20px"></a> <a href="https://scholar.google.com/citations?user=DBJYZiYAAAAJ" target="_blank"><img src="images/googlescholar_icon.png" style="width:1em;margin-right:.2em;"></a><br>
 </p><p style="width: 640px; line-height: 1.6;" align="left">
 Shiyu Jiang joined the lab as a volunteer in January 2023 and became research assistant in July 2023. He currently is a master’s student in Computer Science at Johns Hopkins University and previously received B.S. in Computer Science from Wenzhou-Kean University in China. His research interests lie in developing algorithms and tools to solve biological problems. In his free time, he likes to play soccer and spend some time at the gym.
 </p><br><br>
