--- a/index.htm
+++ b/index.htm
@@ -169,7 +169,7 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		The annual lab retreat is held at Lake Anna, Virginia. Lab members and families, joined by our keynote guest <a href="http://jsb.ucla.edu/about-jingyi-jessica-li" target="_blank">Dr. Jingyi Jessica Li</a> from UCLA and collaborator <a href="https://sites.google.com/view/shanyu" target="_blank">Dr. Shan Yu</a> from Statistics Department, enjoy the breeze on the pontoon and kayaks.
+		The annual lab retreat is held at Lake Anna, Virginia. Joined by our keynote guest <a href="http://jsb.ucla.edu/about-jingyi-jessica-li" target="_blank">Dr. Jingyi Jessica Li</a> from UCLA and collaborator <a href="https://sites.google.com/view/shanyu" target="_blank">Dr. Shan Yu</a> from Statistics Department, lab members and families enjoy the breeze on the pontoon and kayaks.
 		<br><br>
 		Hongpan is awarded a Wagner Fellowship for the coming academic year. Congratulations!
 		<br><br>
