--- a/index.htm
+++ b/index.htm
@@ -169,6 +169,10 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
+		Chongzhi receives an R21 grant from NIH!
+		<br><br>
+		Qingying gives a talk at BMG Postdoc Symposium. Way to go Qingying!
+		<br><br>
 		Zhaoxia and Mengxue pass their qualifying exam and advance to PhD candidacy. Congratulations!
 		</p>
 	</div>
@@ -962,7 +966,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: August 20, 2023</p>
+<p align="right">Last modified: August 31, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
