--- a/index.htm
+++ b/index.htm
@@ -169,9 +169,11 @@ function myFunction() {
 	</div>
 	<div class="column right">
 		<p>
-		Chongzhi receives an R21 grant from NIH!
+		Mengxue and Zhenjia's replication origin analysis paper in collaboration with the Anindya Dutta Lab is published in <a href="https://elifesciences.org/reviewed-preprints/89548" target="_blank"><i><b>eLife</b></i></a> as a reviewed preprint. Look forward to the revision!
 		<br><br>
 		Qingying gives a talk at BMG Postdoc Symposium. Way to go Qingying!
+		<br><br>
+		Chongzhi receives an R21 grant from NIH!
 		<br><br>
 		Zhaoxia and Mengxue pass their qualifying exam and advance to PhD candidacy. Congratulations!
 		</p>
@@ -966,7 +968,7 @@ Yayi Feng, UVA second-year student, joins the lab as a research volunteer. Welco
 &mdash;Thomas Jefferson, 1799</i><br><br>
 </p>
 <hr>
-<p align="right">Last modified: August 31, 2023</p>
+<p align="right">Last modified: September 1, 2023</p>
 </div>
 <!-- Start of StatCounter Code for Wix - HTML5 Version -->
 <script type="text/javascript">
